ainb-tui/crates/ainb-plugin-hangar/tests/snapshots/squads_screen_snapshot__render_create_input_shows_prompt_and_buffer.snap
---
source: crates/ainb-plugin-hangar/tests/squads_screen_snapshot.rs
assertion_line: 159
expression: full
---
                                           [n]ew-agent [c]reate [a]dd [d]el [r]ole [i]nstr [x]assign
Enter a squad name, Esc to cancel
New squad name: qa▏
