ainb-tui/crates/ainb-plugin-hangar/tests/snapshots/squads_screen_snapshot__render_empty_shows_help.snap
---
source: crates/ainb-plugin-hangar/tests/squads_screen_snapshot.rs
expression: full
---
                                                                      [c]reate [a]dd [d]el [x]assign
No squads. Press 'c' to create a squad
