ainb-tui/crates/ainb-plugin-hangar/tests/snapshots/squads_screen_snapshot__render_loaded_lists_squads_leaders_and_members.snap
---
source: crates/ainb-plugin-hangar/tests/squads_screen_snapshot.rs
expression: full
---
                                                                      [c]reate [a]dd [d]el [x]assign
▶ shippers  leader: ● lead-bot  (2 members)
    └ ◐ worker-bot  · agent
    └ ● alice  · human
  reviewers  leader: ● review-bot  (1 member)
    └ ○ second-bot  · agent
