ainb-tui/crates/ainb-plugin-hangar/tests/snapshots/squads_screen_snapshot__render_narrow_width_stays_in_bounds.snap
---
source: crates/ainb-plugin-hangar/tests/squads_screen_snapshot.rs
expression: full
---
  [n]ew-agent [c]reate [a]dd [d]el [x]assign
▶ shippers  leader: ● lead-bot  (2 members)
    └ ◐ worker-bot  · agent
    └ ● alice  · human
  reviewers  leader: ● review-bot  (1 member
    └ ○ second-bot  · agent
