ainb-tui/crates/ainb-plugin-hangar/tests/snapshots/squads_screen_snapshot__render_paints_member_roles_and_the_instructions_glyph.snap
---
source: crates/ainb-plugin-hangar/tests/squads_screen_snapshot.rs
expression: full
---
                                           [n]ew-agent [c]reate [a]dd [d]el [r]ole [i]nstr [x]assign
▶ shippers  leader: ● lead-bot  (2 members)  ✎
    └ ◐ worker-bot  · agent  · owns the migrations
    └ ● alice  · human
  reviewers  leader: ● review-bot  (1 member)
    └ ○ second-bot  · agent
